src/vote-app-90-10.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vote-route
spec:
  hosts:
  - "vote.devopshub.cn"
  - "vote"
  gateways:
  - vote-gateway
  - mesh
  http:
  - route:
    - destination:
        host: vote
        subset: v1
        port:
          number: 5001
      weight: 90
    - destination:
        host: vote
        subset: v2
        port:
          number: 5001
      weight: 10

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: result-route
spec:
  hosts:
  - "result.devopshub.cn"
  gateways:
  - result-gateway
  http:
  - route:
    - destination:
        host: result
        subset: v1
        port:
          number: 5002
      weight: 90
    - destination:
        host: result
        subset: v2
        port:
          number: 5002
      weight: 10
