src/vote-app-new.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vote-route
  labels:
    app.kubernetes.io/name: vote-app
spec:
  hosts:
  - "vote.devopshub.cn"
  - "vote"
  gateways:
  - voting-gateway
  - mesh
  http:
  - route:
    - destination:
        host: vote
        subset: v2
        port:
          number: 5001
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: result-route
  labels:
    app.kubernetes.io/name: vote-app
spec:
  hosts:
  - "result.devopshub.cn"
  - "result"
  gateways:
  - voting-gateway
  - mesh
  http:
  - match:
  - route:
    - destination:
        host: result
        subset: v2
        port:
          number: 5002
