src/vote-app-old.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vote-route
spec:
  hosts:
  - "vote.devopshub.cn"
  - "vote"
  gateways:
  - voting-gateway
  - mesh
  http:
  - route:
    - destination:
        host: vote
        subset: v1
        port:
          number: 5001
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: result-route
spec:
  hosts:
  - "result.devopshub.cn"
  - "result"
  gateways:
  - voting-gateway
  - mesh
  http:
  - route:
    - destination:
        host: result
        subset: v1
        port:
          number: 5002
