src/vote-destination-rule-all.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: vote-destination
  labels:
    app.kubernetes.io/name: vote-app
spec:
  host: vote
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: result-destination
  labels:
    app.kubernetes.io/name: vote-app
spec:
  host: result
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
